<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CaptureActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions1"
        android:textAlignment="textStart" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="62dp"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/genusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginBottom="18dp"
        android:text="@string/genus"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/speciesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/genusView"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/species"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/subspeciesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speciesView"
        android:layout_below="@+id/speciesView"
        android:layout_marginTop="27dp"
        android:text="@string/subspecies"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/englishView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subspeciesView"
        android:layout_below="@+id/subspeciesView"
        android:layout_marginTop="22dp"
        android:text="@string/english"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/genusResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/genusView"
        android:layout_alignBottom="@+id/genusView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="48dp"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/speciesResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/speciesView"
        android:layout_alignBottom="@+id/speciesView"
        android:layout_alignLeft="@+id/genusResult"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/subspeciesResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/englishView"
        android:layout_alignLeft="@+id/speciesResult"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/englishResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/englishView"
        android:layout_alignBottom="@+id/englishView"
        android:layout_alignLeft="@+id/subspeciesResult"
        android:text="@string/blank" />

    <Button
        android:id="@+id/xenoLinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/englishView"
        android:layout_below="@+id/englishView"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/englishResult"
        android:text="@string/xenoLink" />

    <Button
        android:id="@+id/aviLinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/xenoLinkButton"
        android:layout_alignParentBottom="true"
        android:text="@string/aviLink" />

    <ImageButton
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/genusResult"
        android:contentDescription="start"
        android:src="@drawable/ic_launcher" />

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/record"
        android:layout_alignTop="@+id/subspeciesResult"
        android:contentDescription="stop"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>